--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,6 @@
       "sizes": "192x192"
     }
   ],
-  "start_url": "index.html?launcher=true"
+  "start_url": "index.html?launcher=true",
+  "display": "standalone"
 }
