--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,9 @@
       "type": "image/png",
       "sizes": "192x192"
     }],
-  "background_color": "#FF5733"
+  "start_url": "index.html",
+  "display": "standalone",
+  "orientation": "portrait",
+  "background_color": "#FAFAFA",
+  "theme_color": "#512DA8"
 }
